# cfn-inline-lambda-linter

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
cfn_inline_lambda_linter/: linter.py  main.py
tests/integration_tests/: test_linter_end_to_end.py
tests/mock_tests/: test_flake8_mock.py
tests/unit_tests/: test_extractLambdaCode.py  test_findLambdaResources.py  test_outputPrinting.py  test_readFile.py
